[JOST-190] - Backport some bugfixes from OpenSAML3
[JOST-191] - Further Bugfixes to XACML\policy
[JOST-193] - Make the implementation of custom bootstrap code easier, without relying on private data from DefaultBootstrap
[JOST-194] - org.opensaml.ESAPISecurityConfig should use singleton pattern like the default ESAPI reference class

Changes in Release 2.5.3
=============================================
[JOST-176] - SubjectConfirmationUnmarshaller processChildElement misplaces KeyInfo
[JOST-179] - FileBackedHTTPMetadataProvider does not properly release HTTP connections
[JOST-180] - Update dependencies
[JOST-181] - Bug in marshalling an XACML Policy AttributeDesignatorType
[JOST-182] - Clean up maven assembly description

Changes in Release 2.5.2
=============================================
[JOST-160] - Not all times in logging normalized to Zulu
[JOST-163] - No way to stop AbstractReloadingMetadataProvider threads
[JOST-164] - MetadataProvider minRefreshDelay cannot be set greater than 4 hours
[JOST-165] - Update 3rd party runtime library dependencies
[JOST-171] - org.opensaml.saml2.metadata.provider.AbstractReloadingMetadataProvider:246 missing param in logging statement
[JOST-173] - Wrong Treatment of ResponseLocation and Location in Metadata
[JOST-174] - ChainingMetadataProvider calls clear() on unmodifiable list

Changes in Release 2.5.1
=============================================
 - Addressed a signature wrapping attack

Changes in Release 2.5.0
=============================================
[JOST-119] - change pom to create attached -sources jar
[JOST-135] - Update Version class with getVersion() and getName() static methods
[JOST-145] - can not create policy file with EnvironmentAttributeDesignator tag
[JOST-147] - Add support for MDUI extensions into OpenSAML2
[JOST-149] - SubjectTypeImplBuilder typo causes invalid documents to be built
[JOST-150] - Template input needs to be HTML encoded.